			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05j: *********************************

BUG: (3/15/07, DN) Setting don't change when new value is factory value.
FIX: In Setting.set compare new value with getValue() instead of factoryObj.

BUG: (3/15/07, DN) Sturtup fails in MDI mode.
FIX: In TopLevel move MDI initialization from OSInitialize to InitializeWindows,
     so that it is executed after technology initialization.

BUG: (3/15/07, DN) ClassCastException in OptionReconcile
FIX: Consider both Boolean and Integer objects in OptionReconcile constructor.

BUG: (3/15/07, DN) Broken numberofmetals setting in MoCMOS technology.
FIX: In TSMC180.getNumMetal distinguish what technology isthis.

IMP: (3/15/07, DN) Added project setting "tsmc180.NumMetalLayers".

BUG: (3/15/07, DN) Factory values of Technology.Foundry setting should be one of supported foundries.
FIX: In BiCMOS, Bipolar, MoCMOSOld, MoCMOSSub define factory value of Foundry as MOSIS.

BUG: (3/15/07, DN) Crash entering GDS tab in project settings dialog.
FIX: In Foundry.finish use "gdsLayerSettings[layerIndex] != null" instead of "gdsLayerSettings != null".

IMP: (3/14/07, DN) Reader of "projsettings.xml" resets project Settings value to factory default,
   it this Setting  was not encountered in ".xml" file.

BUG: (3/13/07, GVG) Min area issues reported by Misook (Bug#1244, 1240)
FIX: Special treatment of active in transistors so they will be added to left and right networks.
DRC regression has new minArea test.

************************* Version 8.05i: *********************************

BUG: (3/12/07, DN) Electric doesn't start when User.getDefaultTechnology is artwork.
FIX: In Technology.initAllTechnology set "curLayoutTech = MoCMOS.tech".

BUG: (3/12/07, GVG) DRC minArea and active arcs between transistors (Bug #1288)