@@ -101,7 +101,7 @@ public class J3DMenu {
 	    Cell curCell = WindowFrame.needCurCell();
 	    if (curCell == null) return;
         Technology tech = curCell.getTechnology();
-        if (tech != MoCMOS.tech && tech != Technology.getCMOS180Technology() && tech != Technology.getCMOS90Technology())
+        if (tech != MoCMOS.tech && tech != Technology.getTSMC180Technology() && tech != Technology.getCMOS90Technology())
         {
             System.out.println("3D View only available for 180nm and 90nm technologies.");
             return;
